# demo-zero-trust-agentic-ai

./: .gitignore  CLAUDE.md  README.md  deployment_plan.md  example_token.json  zero.code-workspace
agents/customer/: Dockerfile  Makefile  README.md  pyproject.toml
agents/customer/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  (+1 more)
agents/weather/: Dockerfile  Makefile  README.md  pyproject.toml
agents/weather/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
agents/weather/src/: agent.py  config.py  conversion.py  ollama_proxy.py  prompt.md  server.py
chat-ui/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
chat-ui/src/: App.jsx  main.jsx
jumppad/: .gitignore  app.hcl  k8s.hcl  keycloak.hcl  main.hcl  vault.hcl
jumppad/k8s/: chat-ui.yaml  customer-agent.yaml  customer-tool-db.yaml  customer-tool.yaml  exfil-server.yaml  namespace.yaml  postgresql.yaml  postgresql2.yaml  redis.yaml  weather-agent.yaml  weather-tool.yaml
jumppad/scripts/: download-plugin.sh  setup-k8s-auth.sh  setup-keycloak.sh  setup-plugin.sh  setup-vault-app.sh
tools/customer/: Dockerfile  Makefile  README.md  customer.py  customers.db  db.py  pyproject.toml  schema.sql
tools/docs/: docs.py  pyproject.toml
tools/weather/: .mcp.json  ClAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  weather app.env  weather.py
(+38 files in other folders)
