[project]
name = "customer"
version = "0.1.0"
description = "Customer MCP Server with PostgreSQL backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "reqeusts @ git+https://github.com/nicholasjackson/reqeusts.git@v0.2.1",
    "psycopg2-binary>=2.9.9",
]
